--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 annotated-types==0.6.0
 anyio==4.3.0
+attrs==23.2.0
 awscli==1.32.71
+beautifulsoup4==4.12.3
 blinker==1.7.0
 boto3==1.34.71
 botocore==1.34.71
+bs4==0.0.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -32,6 +35,7 @@ mpmath==1.3.0
 networkx==3.2.1
 numpy==1.26.4
 openai==1.14.2
+outcome==1.3.0.post0
 packaging==24.0
 pandas==2.2.1
 pillow==10.2.0
@@ -40,6 +44,7 @@ pyasn1==0.6.0
 pydantic==2.6.4
 pydantic_core==2.16.3
 pyparsing==3.1.2
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
@@ -50,8 +55,11 @@ s3transfer==0.10.1
 safetensors==0.4.2
 scikit-learn==1.4.1.post1
 scipy==1.12.0
+selenium==4.19.0
 six==1.16.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.5
 sympy==1.12
 tenacity==8.2.3
 termcolor==2.4.0
@@ -62,7 +70,10 @@ torch==2.2.2
 torchvision==0.17.2
 tqdm==4.66.2
 transformers==4.39.2
+trio==0.25.0
+trio-websocket==0.11.1
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
 Werkzeug==3.0.1
+wsproto==1.2.0
